load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "gemmini",
    platform = "asap7",
    verilog_files = ["//designs/src/gemmini:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "PDN_TCL": [":pdn.tcl"],
        "IO_CONSTRAINTS": [":io.tcl"],
        "FOOTPRINT_TCL": [":io.tcl"],
    },
    arguments = {
        "CORE_UTILIZATION": "43",
        # SETUP_MOVE_SEQUENCE split_load-drop (ODB-1200) removed on the
        # bazel-orfs 553c1c3 / OpenROAD 299f3015 upgrade — the resizer bug
        # is fixed, so the default move sequence (incl. split_load) is back.
    },
)
