load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "lfsr",
    top = "lfsr_prbs_gen",
    platform = "asap7",
    verilog_files = ["//designs/src/lfsr:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "CORE_UTILIZATION": "55",
        "TNS_END_PERCENT": "100",
    },
)
