load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "lfsr",
    top = "lfsr_prbs_gen",
    platform = "asap7",
    verilog_files = ["//designs/src/lfsr:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "PLACE_DENSITY": "0.75",
        "CORE_UTILIZATION": "70",
        "TNS_END_PERCENT": "100",
    },
)
