load("//:defs.bzl", "hightide_design")

package(default_visibility = ["//designs/asap7/liteeth:__pkg__"])

# SRAM macros instantiated by the liteeth UDP-USP-GTH-SGMII config.
filegroup(
    name = "sram_lefs",
    srcs = [
        "sram/lef/fakeram_1rw1r_64w64d_sram.lef",
        "sram/lef/fakeram_1rw1r_64w1024d_sram.lef",
    ],
)

filegroup(
    name = "sram_libs",
    srcs = [
        "sram/lib/fakeram_1rw1r_64w64d_sram.lib",
        "sram/lib/fakeram_1rw1r_64w1024d_sram.lib",
    ],
)

# LiteEth UDP endpoint over the Xilinx UltraScale+ GTH SGMII PHY.
# Verilog top module stays `liteeth_udp_usp_gth_sgmii` (LiteX-generated);
# `name` is the short Bazel target / display name.
hightide_design(
    name = "liteeth",
    top = "liteeth_udp_usp_gth_sgmii",
    platform = "asap7",
    verilog_files = ["//designs/src/liteeth:liteeth_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_ASAP7_CELLS",
        # asap7 macros grew ~5x after the bsg_fakeram migration (the prior
        # OpenFakeRAM LEFs were unrealistically dense for 7nm). The 2026-05-11
        # UTIL 35->50 / DENSITY 0.30->0.55 sweep was tuned against the old
        # macros and now causes RSZ-0074 routing failures on udp0_sink_last
        # at grt. Step back to the pre-sweep settings until a fresh sweep.
        "CORE_UTILIZATION": "43",
        "PLACE_DENSITY": "0.30",
        # Same OpenROAD ODB-1200 hold-repair crash as liteeth_udp_stream_sgmii;
        # widened to this variant after the OpenROAD pin moved from 5f1bd87f
        # to 578be38a (HighTide #103). Crash signature this time:
        #   [ERROR ODB-1200] InsertBufferBeforeLoads: Load pin '_31891_/SN'
        #   is not connected to net '_03221_'.  Error: cts.tcl, 82 ODB-1200
        # Skip CTS repair_timing; downstream GRT/route still run hold-repair.
        # Tracking re-enable: https://github.com/VLSIDA/HighTide/issues/75.
        "SKIP_CTS_REPAIR_TIMING": "1",
        # After the bsg_fakeram migration, the post-GRT repair_timing pass
        # (global_route.tcl:125, resizer SplitLoadMove) also trips RSZ-0074
        # on udp0_sink_last ("found route to N pins, expected N+1").
        # Same family of resizer/routing book-keeping bugs as ODB-1200.
        # Skip incremental repair; route's own hold-repair still runs.
        "SKIP_INCREMENTAL_REPAIR": "1",
    },
)
