load("//:defs.bzl", "hightide_design")

package(default_visibility = ["//designs/asap7/liteeth:__pkg__"])

# SRAM macros instantiated by the liteeth UDP-USP-GTH-SGMII config.
filegroup(
    name = "sram_lefs",
    srcs = [
        "sram/lef/fakeram_1rw1r_64w64d_sram.lef",
        "sram/lef/fakeram_1rw1r_64w1024d_sram.lef",
    ],
)

filegroup(
    name = "sram_libs",
    srcs = [
        "sram/lib/fakeram_1rw1r_64w64d_sram.lib",
        "sram/lib/fakeram_1rw1r_64w1024d_sram.lib",
    ],
)

# LiteEth UDP endpoint over the Xilinx UltraScale+ GTH SGMII PHY.
# Verilog top module stays `liteeth_udp_usp_gth_sgmii` (LiteX-generated);
# `name` is the short Bazel target / display name.
hightide_design(
    name = "liteeth",
    top = "liteeth_udp_usp_gth_sgmii",
    platform = "asap7",
    verilog_files = ["//designs/src/liteeth:liteeth_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_ASAP7_CELLS",
        # asap7 macros grew ~5x after the bsg_fakeram migration (the prior
        # OpenFakeRAM LEFs were unrealistically dense for 7nm). The 2026-05-11
        # UTIL 35->50 / DENSITY 0.30->0.55 sweep was tuned against the old
        # macros and now causes RSZ-0074 routing failures on udp0_sink_last
        # at grt. Step back to the pre-sweep settings until a fresh sweep.
        "CORE_UTILIZATION": "38",
        "PLACE_DENSITY": "0.30",
        # ODB-1200 / RSZ-0074 (HighTide #75/#103) fixed in OpenROAD 299f3015,
        # but full repair_timing over-buffers this design on the new tools
        # (+37% cells). Keep skipping repair and instead relax util 43→38 to
        # shorten the critical path — recovers WNS toward the 920 ps clock
        # with cell area unchanged (only die padding grows). See DECISIONS.md.
        "SKIP_CTS_REPAIR_TIMING": "1",
        "SKIP_INCREMENTAL_REPAIR": "1",
    },
)
