load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "gt2n",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "40",
        "MAX_ROUTING_LAYER": "M13",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "5 5",
        "MACRO_BLOCKAGE_HALO": "0.5",
        "TNS_END_PERCENT": "100",
    },
)
