load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "lfsr",
    top = "lfsr_prbs_gen",
    platform = "gt2n",
    verilog_files = ["//designs/src/lfsr:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "CORE_UTILIZATION": "25",
        "MAX_ROUTING_LAYER": "M5",
        "TNS_END_PERCENT": "100",
    },
)
