load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "minimax",
    platform = "gt2n",
    verilog_files = ["//designs/src/minimax:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "PLACE_DENSITY": "0.7",
        "CORE_UTILIZATION": "60",
        "CORE_ASPECT_RATIO": "1.0",
        "CORE_MARGIN": "4",
        "MAX_ROUTING_LAYER": "M9",
        "TNS_END_PERCENT": "100",
    },
)
