load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "nangate45",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
        "MACRO_PLACEMENT_TCL": [":macro_placement.tcl"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "55",
        "PLACE_DENSITY": "0.65",
        "MACRO_PLACE_HALO": "20 20",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)
