load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "nangate45",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "DIE_AREA": "0 0 4502 4277",
        "CORE_AREA": "2 2 4500 4275",
        "PLACE_DENSITY": "0.65",
        "MACRO_PLACE_HALO": "20 20",
        "MACRO_BLOCKAGE_HALO": "0.5",
        # Force all 367 IO pins onto the bottom edge (12 um spacing)
        # to avoid clustering and shorten routes to the stdcell band
        # below the four large fakeram macros at the top of the die.
        "PLACE_PINS_ARGS": "-exclude top:* -exclude left:* -exclude right:* -min_distance 4 -min_distance_in_tracks",
    },
)
