load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

# Eyeriss v2 sparse-CNN accelerator on nangate45. Same RTL as asap7 — 2x2
# cluster group array with 9 PEs per cluster — but FakeRAMs are regenerated
# for the 45nm metal stack via designs/nangate45/eyeriss/sram/fakeram_nangate45.cfg.
hightide_design(
    name = "eyeriss",
    top = "TOP",
    platform = "nangate45",
    verilog_files = ["//designs/src/eyeriss:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        # PPA-tuned round 2: prior 4.5-ns / util-38 / halo-15 build hit
        # Fmax 240 MHz with +340 ps of setup headroom and 10.6 % GRT
        # congestion / 0 overflow.  Tighten clock 4.5→4.2 ns (target ~238
        # MHz, leaves ~40 ps headroom), util 38→42, halo 15→12 (PDN-0179
        # was fixed at ≥ 15 µm originally — 12 is a measured step into
        # the unknown).
        "CORE_UTILIZATION": "42",
        "PLACE_DENSITY_LB_ADDON": "0.15",
        "MACRO_PLACE_HALO": "12 12",
        "TNS_END_PERCENT": "100",
        # Same ODB-1200 pattern as asap7 — drop split_load from the move
        # sequence to keep the rest of repair_timing active.
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
        # repair_timing non-convergence on the inter-cluster psum chains
        # (CLAUDE.md table; same pathology as asap7).
        "SKIP_INCREMENTAL_REPAIR": "1",
        "SKIP_LAST_GASP": "1",
    },
)
