load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "floonoc",
    top = "floonoc_mesh_top",
    platform = "nangate45",
    verilog_files = ["//designs/src/floonoc:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "FOOTPRINT_TCL": [":io.tcl"],
    },
    arguments = {
        "SYNTH_HDL_FRONTEND": "slang",
        "VERILOG_INCLUDE_DIRS": "designs/src/floonoc/dev/generated/deps/include designs/src/floonoc/dev/generated",
        "VERILOG_DEFINES": "-D VERILATOR",
        "DIE_AREA": "0 0 750 750",
        "CORE_AREA": "5 5 745 745",
        "TNS_END_PERCENT": "100",
    },
)
