load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "gemmini",
    platform = "nangate45",
    verilog_files = ["//designs/src/gemmini:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
    },
    arguments = {
        "CORE_UTILIZATION": "35",
        # Drop split_load from repair_timing's move sequence to avoid
        # OpenROAD CTS ODB-1200 (see CLAUDE.md "Known bug workarounds").
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
    },
)
