load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "gemmini",
    platform = "nangate45",
    verilog_files = ["//designs/src/gemmini:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
    },
    arguments = {
        "CORE_UTILIZATION": "43",
        # SETUP_MOVE_SEQUENCE split_load-drop (ODB-1200) removed on the
        # bazel-orfs 553c1c3 / OpenROAD 299f3015 upgrade — resizer bug fixed.
    },
)
